# remote_print

./: .gitignore  Cargo.toml  README.md  cliff.toml
.cargo/: config.toml
.github/workflows/: release-plz.yml  release.yml
certs/: ca.der  mason.crt  mason.der  root_mason.crt
printer_client/: CHANGELOG.md  Cargo.toml
printer_client/certs/: mason.der
printer_client/src/: app.rs  lib.rs  main.rs  update.rs
printer_client/wix/: main.wxs
server/: CHANGELOG.md  Cargo.toml
server/src/: lib.rs  main.rs
server/wix/: main.wxs
