repository = "https://github.com/CodedMasonry/remote_print"

[workspace]
resolver = "2"
members = [
    "server",
    "printer_client",
    
]
default-members = [
    "server",
]

# Config for 'cargo dist'
[workspace.metadata.dist]
allow-dirty = ["ci"]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.4.2"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-pc-windows-msvc"] # aarch64-unknown-linux-gnu
# Publish jobs to run in CI
pr-run-mode = "plan"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
