repository = "https://github.com/CodedMasonry/remote_print"

[workspace]
resolver = "2"
members = ["server", "printer_client"]
default-members = ["server"]

# Config for 'cargo dist'
[workspace.metadata.dist]
# Skip checking whether the specified configuration files are up to date
allow-dirty = ["ci"]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.16.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
    "aarch64-unknown-linux-gnu",
]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether failing tasks should make us give up on all other tasks
fail-fast = true
# Whether to install an updater program
install-updater = false

[workspace.metadata.dist.dependencies.apt]
cmake = '*'
libxcb-render0-dev = '*'
libxcb-shape0-dev = '*'
libxcb-xfixes0-dev = '*'
libxkbcommon-dev = '*'
libssl-dev = '*'
libgtk-3-dev = '*'
librust-atk-dev = '*'
gcc-aarch64-linux-gnu = { version = '*', targets = [
    "aarch64-unknown-linux-gnu",
] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
