[package]
name = "printer_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
directories-next = "2.0.0"
eframe = "0.23.0"
egui = { version = "0.23.0", features = ["persistence"] }
quinn = "0.10.2"
rfd = "0.12.1"
rustls = "0.21.7"
serde = "1.0.189"
tokio = { version = "1.33.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
url = "2.4.1"
webpki-roots = "0.25.2"
zeroize = { version = "1.6.0", features = ["derive"] }
