[package]
name = "printer_client"
version = "0.1.23"
edition = "2021"
repository = "https://github.com/CodedMasonry/remote_print"
authors = ["Brock Shaffer <109301662+CodedMasonry@users.noreply.github.com>"]
license = "MIT"
description = """
A backend for running remote printing over the internet, using QUIC + TLS
"""

[package.metadata.wix]
upgrade-guid = "CB24562B-4738-4A62-8882-BDDF34D65F80"
path-guid = "B6B55B4A-BA6D-404B-8509-8FE0E750E5D6"
license = false
eula = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
eframe = "0.24.1"
egui = { version = "0.24.1", features = ["persistence"] }
quinn = "0.10.2"
rfd = "0.12.1"
rustls = "0.21.7"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
url = "2.4.1"
webpki-roots = "0.26.0"
include_dir = "0.7.3"
chrono = { version = "0.4.31", features = ["serde"] }
uuid = { version = "1.5.0", features = ["v4", "serde"] }
inquire = "0.7.0"
directories = "5.0"
tempfile = "3.8.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
update-informer = { version = "1.1.0" }
semver = { version = "1.0.20", features = ["serde"] }
