[package]
name = "printer_client"
version = "0.1.25"
edition = "2021"
repository = "https://github.com/CodedMasonry/remote_print"
authors = ["Brock Shaffer <109301662+CodedMasonry@users.noreply.github.com>"]
license = "MIT"
description = """
A backend for running remote printing over the internet, using QUIC + TLS
"""

[package.metadata.wix]
upgrade-guid = "CB24562B-4738-4A62-8882-BDDF34D65F80"
path-guid = "B6B55B4A-BA6D-404B-8509-8FE0E750E5D6"
license = false
eula = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.7", features = ["derive"] }
eframe = "0.24.1"
egui = { version = "0.24.1", features = ["persistence"] }
quinn = "0.10.2"
rfd = "0.12.1"
rustls = "0.21.12"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.2"
webpki-roots = "0.26.3"
include_dir = "0.7.4"
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1.9.1", features = ["v4", "serde"] }
inquire = "0.6.2"
directories = "5.0"
tempfile = "3.10.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
update-informer = { version = "1.1.0" }
semver = { version = "1.0.23", features = ["serde"] }
