
[package]
name = "printer_server"
version = "0.1.14"
edition = "2021"
repository = "https://github.com/CodedMasonry/remote_print"
authors = ["Brock Shaffer <109301662+CodedMasonry@users.noreply.github.com>"]
license = "MIT"
description = """
A backend for running remote printing over the internet, using QUIC + TLS
"""
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.6", features = ["derive"] }
directories = "5.0"
inquire = "0.6.2"
lazy_static = "1.4.0"
orion = { version = "0.17.6", features = ["serde"] }
quinn = "0.10.2"
rand = "0.8.5"
rcgen = { version = "0.11.3", features = ["zeroize"] }
rustls = "0.21.7"
rustls-pemfile = "1.0.3"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.5.0", features = ["v4", "serde"] }
